2007-05-28  Nathan Sidwell  <nathan@codesourcery.com>

	* app.c (do_scrub_chars): Cope with \ at end of buffer.

2007-05-26  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (ppc_insert_operand): Truncate sign bits in
	top 32 bits of 64 bit value if so doing results in passing
	range check.  Rewrite sign extension fudges similarly.  Enable
	fudges for powerpc64 too.  Report user value if range check
	fails rather than fudged value.  Negate PPC_OPERAND_NEGATIVE
	range rather than value, also to report user value on failure.

2007-03-25  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (T2_SUBS_PC_LR): Define.
	(do_t_add_sub): Correctly encode subs pc, lr, #const.
	(do_t_mov_cmp): Correctly encode movs pc, lr.

2007-05-24  Steve Ellcey  <sje@cup.hp.com>

	* Makefile.in: Regnerate.
	* configure: Regenerate.
	* aclocal.m4: Regenerate.
	* doc/Makefile.in: Regenerate.

2007-05-22  Bob Wilson  <bob.wilson@acm.org>
	
	* doc/c-xtensa.texi (Xtensa Automatic Alignment): Remove statements
	and index entries about automatic alignment of ENTRY instructions.
	
2007-05-22  Nick Clifton  <nickc@redhat.com>

	* doc/as.texinfo: Use @copying around the copyright notice.

2007-05-18  Joseph Myers  <joseph@codesourcery.com>

	* config/tc-mips.c (s_mipsset): Use generic s_set for directives
	containing a comma.

2007-05-17  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/4517
	2003-06-05  Michal Ludvig  <mludvig@suse.cz>
	* doc/as.texinfo: Document new directives: .cfi_restore, 
	.cfi_undefined, .cfi_same_value, .cfi_return_column, 
	.cfi_remember_state and .cfi_restore_state.

2007-05-17  Nathan Sidwell  <nathan@codesourcery.com>

	* config/tc-m68k.c (md_apply_fix): Show value of out of range
	fixups in error message.
	(md_conver_frag_1): Propagate the fix source location and use
	as_bad_where rather than fatal, for better error messages.

2007-05-16  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (v7m_psrs): Add uppercase PSR names and xpsr.
